<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reviews.ReviewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ratingText2"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/review_rating" />

                <ImageView
                    android:id="@+id/reviewStarRating2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" />
            </androidx.gridlayout.widget.GridLayout>

            <TextView
                android:id="@+id/author_text_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_authdate"
                android:textColor="@color/mediumblue"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/review_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:text="@string/review_text" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>