<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/review_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            android:outlineAmbientShadowColor="@color/mediumblue"
            android:outlineSpotShadowColor="@color/mediumblue"
            app:cardBackgroundColor="@color/nightback">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/authorDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/review_authdate"
                    android:textColor="@color/mediumblue"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ratingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/white"
                        android:text="@string/review_rating" />

                    <ImageView
                        android:id="@+id/reviewStarRating"
                        android:layout_width="24dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"

                        app:srcCompat="@android:drawable/btn_star_big_on" />
                </androidx.gridlayout.widget.GridLayout>

                <TextView
                    android:id="@+id/reviewText"
                    android:layout_width="355dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:text="@string/review_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>