<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="665dp"
        android:tint="@color/mediumblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_theaters_white_18dp"
        android:contentDescription="TODO" />

    <!--
  slideranimation duration is to set duration for transition between two slides
  sliderautocycledirection is to set animationbetween transition of your slides
  sliderindicator enables is used to display the indicators for slider
  slider indicator gravity is to set gravity for indicator gravity
  slider indicator margin is to set margin for indicator
  slider indicator orientation is used to add orientation for slider
  slider indicator padding is use to add padding to indicator
  slider indicator selected color is use to specify selected color
  and slider indicator unselected color is use to specify the color when the slider is unselected
  slider scroll time in sec is used to specify scrolling time in seconds
  -->


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="193dp"
        android:layout_height="59dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="4dp"
        android:background="@color/nightback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="#00FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/movies_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tv_shows_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_shows" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>